refresh/load more implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="loading">Loading&#8230;&#8230;&#8230;</string>
     <string name="title">RecycleView | Reddit content </string>
     <string name="smtWW">Something went wrong :(</string>
+    <string name="smtWWInt">Check Internet connection. Something went wrong :(</string>
 
     <string name="cancel">Cancel</string>
     <string name="changeSetting">Change settings</string>
